--- a/index.html
+++ b/index.html
@@ -43,10 +43,19 @@
 
 <main class="o-main">
     
-  <div class="c-hero">
+  <div class="c-hero c-hero--special">
     <div class="o-container">
-      hello this is the hero
-    </div>
+      <div class="c-hero__inner">
+        <h2 class="c-hero__heading">
+          Lorem ipsum dolor ist
+        </h2>
+        <div class="c-hero__content">
+          <h3 class="c-hero__sub-heading">Lorem ipsum dolor sit amet, consectetuer</h3>
+          <p class="c-hero__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
+          <a href="about.html" class="c-btn c-btn--purple">Learn more</a>
+        </div>
+      </div><!-- /c-hero__inner -->
+    </div><!-- /o-container -->
   </div><!-- /c-hero -->
 
   <div class="c-cta c-cta--green">
