about, services, and contact pages styled and marked up

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Welcome to Student Solutions Trinidad &amp; Tobago</title>
+  <title>About &raquo; Student Solutions Trinidad &amp; Tobago</title>
   <meta name="description" content="Studen solutions...">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -47,7 +47,7 @@
   <div class="c-hero c-hero--normal">
     <div class="o-container o-container--m o-container--pad-top">
       <div class="c-hero__inner">
-        <h2 class="c-hero__heading">About Student Solutions Ipsum Blah</h2>
+        <h1 class="c-hero__heading">About Student Solutions Ipsum Blah</h1>
       </div><!-- /c-hero__inner -->
     </div><!-- /o-container -->
   </div><!-- /c-hero -->
@@ -57,12 +57,39 @@
       <div class="o-grid__row">
         <div class="o-grid__item o-grid__item--50">
           <div class="c-content-box">
-            <h2>Lorem Ipsum Dolor</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+            <div class="s-content-box">
+              <h2>Lorem Ipsum Dolor</h2>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+            </div>
           </div>
         </div>
         <div class="o-grid__item o-grid__item--50">
-          hello
+          <div class="c-about-widget">
+            <img src="img/about/abacus.svg" alt="" class="c-about-widget__icon">
+            <h3 class="c-about-widget__content">SAT &amp; ACT Math</h3>
+          </div><!-- /c-about-widget -->
+
+          <div class="c-about-widget">
+            <img src="img/about/abacus.svg" alt="" class="c-about-widget__icon">
+            <h3 class="c-about-widget__content">SAT &amp; ACT Math</h3>
+          </div><!-- /c-about-widget -->
+
+          <div class="c-about-widget">
+            <img src="img/about/abacus.svg" alt="" class="c-about-widget__icon">
+            <h3 class="c-about-widget__content">SAT &amp; ACT Math</h3>
+          </div><!-- /c-about-widget -->
+
+          <div class="c-about-widget">
+            <img src="img/about/abacus.svg" alt="" class="c-about-widget__icon">
+            <h3 class="c-about-widget__content">SAT &amp; ACT Math</h3>
+          </div><!-- /c-about-widget -->
+
+          <div class="c-about-widget">
+            <img src="img/about/abacus.svg" alt="" class="c-about-widget__icon">
+            <h3 class="c-about-widget__content">SAT &amp; ACT Math</h3>
+          </div><!-- /c-about-widget -->
         </div>
       </div>
     </div>
@@ -77,17 +104,38 @@
   </div><!-- /c-cta -->
 
   <div class="o-container o-container--l">
-    <div class="o-grid o-grid--no-break">
-      <div class="o-grid__row">
-        <div class="o-grid__item o-grid__item--33">
-          this is the stats boxes
+    <div class="c-statistics">
+      
+      <div class="c-statistic">
+        <div class="c-statistic-box c-statistic-box--grey">
+          <span class="c-statistic-box__number">100+</span>
+          <hr class="c-statistic-box__divider">
+          <span class="c-statistic-box__item">Students</span>
         </div>
-        <div class="o-grid__item o-grid__item--fill">
-          this is the content boxes
+        <div class="c-statistic-content">
+          <div class="s-content-box">
+            <h2>lorem ipsum dolor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
+      </div><!-- /c-statistic -->
+
+      <div class="c-statistic">
+        <div class="c-statistic-box c-statistic-box--purple">
+          <span class="c-statistic-box__number">50+</span>
+          <hr class="c-statistic-box__divider">
+          <span class="c-statistic-box__item">Universities</span>
+        </div>
+        <div class="c-statistic-content">
+          <div class="s-content-box">
+            <h2>lorem ipsum dolor</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+          </div>
+        </div>
+      </div><!-- /c-statistic -->
+
+    </div><!-- /c-statistics -->
+  </div><!-- /o-container -->
 
   <div class="c-cta c-cta--slate">
     <div class="o-container o-container--m o-container--pad-top">
